# rag-pipeline

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  start.sh
.streamlit/: config.toml
rag_pipeline/: app.py  settings.py
rag_pipeline/demo/: app.py
rag_pipeline/examples/: __init__.py  scraper_opensearch_pipeline.py
rag_pipeline/pipelines/: __init__.py  base.py  simple.py
rag_pipeline/scrapers/: __init__.py  base.py  generic.py
