[project]
name = "rag-pipeline"
version = "0.1.0"
description = "An example implementation of a RAG pipeline using LlamaIndex. This also uses Streamlit for a demo."
readme = "README.md"
requires-python = ">=3.11.11,<3.12"
dependencies = [
    "llama-index>=0.12.40",
    "llama-index-vector-stores-opensearch>=0.5.5",
    "playwright>=1.52.0",
    "streamlit>=1.45.1",
    "streamlit-authenticator>=0.4.2",
]
